# fdtd-wasm

./: Cargo.toml  README.md  api_test_report.html  gemini.md  generate_report.js  requirements.md  test_report.html
src/: engine.rs  lib.rs  parameters.rs  rasterizer.rs  renderer.rs  state.rs  step.rs  utils.rs
src/comms/: demodulator.rs  mod.rs  modulator.rs  packet.rs
tests/: test_comms.rs  test_comms_packet.rs  test_engine_basics.rs  test_engine_boundaries.rs  test_engine_update.rs  test_parameters.rs  test_rasterizer.rs  test_renderer.rs  test_simulator_api.rs  test_state.rs  test_step.rs  test_utils.rs
www/: config-default.json  config.json  index.html  index.js
